--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,10 +34,11 @@
     "customizations": {
         "vscode": {
             "extensions": [
-				// "ms-azuretools.vscode-docker"
-                // ,"mads-hartmann.bash-ide-vscode"
-                // ,
-				// "EditorConfig.EditorConfig"
+				"ms-azuretools.vscode-docker"
+                ,
+				"mads-hartmann.bash-ide-vscode"
+                ,
+				"EditorConfig.EditorConfig"
             ]
         }
     },
