--- a/configs/php/local.ini
+++ b/configs/php/local.ini
@@ -4,6 +4,7 @@
 extension="/usr/local/lib/php/pecl/20220829/protobuf.so"
 extension="/usr/local/lib/php/pecl/20220829/opentelemetry.so"
 extension="/usr/local/lib/php/pecl/20220829/apcu.so"
+extension="/usr/local/lib/php/pecl/20220829/redis.so"
 
 [PHP]
 date.timezone = "UTC"
