--- a/.github/workflows/0.checks-adminator2.yml
+++ b/.github/workflows/0.checks-adminator2.yml
@@ -31,14 +31,15 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           coverage: none
-          extensions: opentelemetry, grpc, protobuf
+          extensions: opentelemetry, grpc, protobuf, redis
 
       - name: Print PHP version and extensions
         run: |
           php -v \
           && php --ri opentelemetry \
           && php --ri grpc \
-          && php --ri protobuf
+          && php --ri protobuf \
+          && php --ri redis          
 
       - name: Install dependencies
         run: composer install --ignore-platform-reqs
