--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,17 @@ services:
     #   start_period: 30s
     #   start_interval: 5s
 
+  redis:
+    image: redis:7.4
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      interval: 1s
+      timeout: 3s
+      retries: 5
+    command: ["redis-server"]
+    ports:
+      - 6379:6379
+
   # fix permissions: echo "host all all all $POSTGRES_HOST_AUTH_METHOD" >> pg_hba.conf
   # pgadmin:
   #   image: dpage/pgadmin4
