--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -6,7 +6,8 @@
     "config": {
         "allow-plugins": {
             "kylekatarnls/update-helper": true,
-            "php-http/discovery": false
+            "php-http/discovery": false,
+            "tbachert/spi": true
         }
     },
     "require": {
@@ -23,10 +24,11 @@
         "monolog/monolog": "^3.6.0",
         "respect/validation": "^2.2",
         "formr/formr": "^1.5",
-        "illuminate/database": "^10.48.10",
-        "illuminate/events": "^v10.48.10",
-        "illuminate/cache": "^10.48.10",
-        "illuminate/pagination": "^10.48.10",
+        "illuminate/database": "^10.48.28",
+        "illuminate/events": "^v10.48.28",
+        "illuminate/cache": "^10.48.28",
+        "illuminate/pagination": "^10.48.28",
+        "illuminate/redis": "^10.48.28",
         "cartalyst/sentinel": "^v7.0",
         "nyholm/psr7": "^1.4.1",
         "nyholm/psr7-server": "^1.0.2",
@@ -38,16 +40,19 @@
         "lloricode/laravel-html-table": "^2.1",
         "evilfreelancer/routeros-api-php": "1.5.2",
         "robmorgan/phinx": "^0.12.10",
-        "open-telemetry/opentelemetry-auto-slim": "^1.0.5",
-        "open-telemetry/exporter-otlp": "^1.0.4",
-        "open-telemetry/detector-container": "^1.0.0",
-        "open-telemetry/transport-grpc": "^1.0.0",
+        "open-telemetry/opentelemetry-auto-slim": "1.1.1",
+        "open-telemetry/exporter-otlp": "1.3.1",
+        "open-telemetry/detector-container": "^1.1.0",
+        "open-telemetry/transport-grpc": "1.1.3",
         "php-http/guzzle7-adapter": "^1.0.0",
         "amnuts/opcache-gui": "^3.5.4",
         "phpoffice/phpspreadsheet": "^2.1",
-        "open-feature/sdk": "^2.0.6",
-        "open-feature/flagd-provider": "0.7",
-        "odan/phinx-migrations-generator": "^6.0"
+        "open-feature/sdk": "2.0.10",
+        "open-feature/flagd-provider": "0.7.0",
+        "odan/phinx-migrations-generator": "^6.0",
+        "predis/predis": "^2.2",
+        "ramsey/uuid": "^4.7",
+        "google/protobuf": "^3.25"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
