--- a/adminator3/phpstan-objekty.neon
+++ b/adminator3/phpstan-objekty.neon
@@ -40,11 +40,6 @@ parameters:
 			path: app/Core/Item/objekt.class.php
 
 		-
-			message: "#^Right side of && is always true\\.$#"
-			count: 1
-			path: app/Core/Item/objekt.class.php
-
-		-
 			message: "#^Variable \\$find_tarif in isset\\(\\) is never defined\\.$#"
 			count: 1
 			path: app/Core/Item/objekt.class.php
@@ -67,6 +62,21 @@ parameters:
 		-
 			message: "#^Parameter \\#1 \\$string of function urlencode expects string, int given\\.$#"
 			count: 4
+			path: app/Core/Item/stb.class.php
+
+		-
+			message: "#^Cannot unset offset \\'ip_adresa\\' on array\\{ip\\: mixed\\}\\.$#"
+			count: 1
+			path: app/Core/Item/stb.class.php
+
+		-
+			message: "#^Offset \\'sw_port\\' does not exist on array\\{ip\\: mixed\\}\\.$#"
+			count: 1
+			path: app/Core/Item/stb.class.php
+
+		-
+			message: "#^Cannot unset offset \\'sw_port\\' on array\\{ip\\: mixed, port_id\\: mixed}\\.$#"
+			count: 1
 			path: app/Core/Item/stb.class.php
 
 		-
