--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,16 @@ services:
     #   start_period: 10s
     #   start_interval: 1s
 
+  asynqmon:
+    image: hibiken/asynqmon
+    restart: always
+    platform: linux/amd64
+    ports:
+    - '8082:8080'
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - ENABLE_METRICS_EXPORTER=true
+
   mysql:
     image: mysql:8.0
     cap_add:
