--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
             "username": "root",
             "password": "isp-net-passwd"
         }
-    ]
+    ],
+    "makefile.configureOnOpen": false
 }
