--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -52,7 +52,8 @@
         "odan/phinx-migrations-generator": "^6.0",
         "predis/predis": "^2.2",
         "ramsey/uuid": "^4.7",
-        "google/protobuf": "^3.25"
+        "google/protobuf": "^3.25",
+        "josiasmontag/laravel-redis-mock": "^1.3.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
