--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -71,7 +71,8 @@
         "fakerphp/faker": "^1.2",
         "symfony/dom-crawler": "^7.0",
         "symfony/css-selector": "^7.0",
-        "vincentlanglet/twig-cs-fixer": "^2.10"
+        "vincentlanglet/twig-cs-fixer": "^2.10",
+        "josiasmontag/laravel-redis-mock": "^1.3.5"
     },
     "suggest": {
         "illuminate/database": "By default, Sentinel utilizes the powerful Illuminate database layer.",
@@ -82,6 +83,7 @@
     "autoload-dev": {
         "psr-4": {
           "App\\Controllers\\": "app\\Controllers",
+          "App\\Work\\": "app\\Work",
           "DI\\Test\\UnitTest\\Fixtures\\": "tests/php-di/Fixtures"
         },
         "files": [
@@ -89,7 +91,6 @@
             "tests/AdminatorAsserts.php",
             "tests/Twig-View/TestCase.php"
         ]
-
     },
     "scripts": {
         "dump": "composer dump-autoload -a",
