--- a/adminator2/composer.json
+++ b/adminator2/composer.json
@@ -17,8 +17,7 @@
         "nyholm/psr7-server": "^1.0.2",
         "symfony/http-foundation": "^v6.4",
         "odan/session": "^6.1",
-        "phpmailer/phpmailer": "^6.9.1",
-        "evilfreelancer/routeros-api-php": "1.5.2"
+        "phpmailer/phpmailer": "^6.9.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
