--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -38,6 +38,7 @@
         "setasign/fpdf": "1.8.6",
         "phpmailer/phpmailer": "^6.9.1",
         "lloricode/laravel-html-table": "^2.1",
+        "evilfreelancer/routeros-api-php": "1.5.2",
         "robmorgan/phinx": "^0.12.10",
         "open-telemetry/opentelemetry-auto-slim": "1.1.1",
         "open-telemetry/exporter-otlp": "1.3.1",
